@@ -7,19 +7,18 @@ import io.vertx.core.http.Cookie;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServerResponse;
 import io.vertx.ext.web.RoutingContext;
+import io.vertx.uritemplate.UriTemplate;
+import io.vertx.uritemplate.Variables;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.validator.routines.UrlValidator;
-import org.prebid.server.exception.PreBidException;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.log.Logger;
 import org.prebid.server.log.LoggerFactory;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
@@ -27,12 +26,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-/**
- * This class consists of {@code static} utility methods for operating HTTP requests.
- */
 public final class HttpUtil {
 
     private static final Logger logger = LoggerFactory.getLogger(HttpUtil.class);
@@ -84,88 +79,26 @@ public final class HttpUtil {
     public static final CharSequence SEC_CH_UA_MODEL = HttpHeaders.createOptimized("Sec-CH-UA-Model");
     public static final CharSequence SEC_CH_UA_FULL_VERSION_LIST =
             HttpHeaders.createOptimized("Sec-CH-UA-Full-Version-List");
-    public static final String MACROS_OPEN = "{{";
-    public static final String MACROS_CLOSE = "}}";
-
-    private static final Pattern VALID_DOMAIN = Pattern.compile("^[a-zA-Z0-9.-]+(:[0-9]+)?$");
-    private static final String INVALID_PATH_CHARACTERS = "?#\\";
-
-    private static final UrlValidator URL_VALIDAROR = UrlValidator.getInstance();
 
     private HttpUtil() {
     }
 
-    /**
-     * Checks the input string for using as URL.
-     */
-    @Deprecated
-    public static String validateUrl(String url) {
-        if (containsMacrosses(url)) {
-            return url;
-        }
-
+    public static URL parseUrl(String url) {
         try {
-            return new URL(url).toString();
-        } catch (MalformedURLException e) {
+            return new URI(url).toURL();
+        } catch (Exception e) {
             throw new IllegalArgumentException("URL supplied is not valid: " + url, e);
         }
     }
 
-    public static String validateUrlSyntax(String url) {
-        if (containsMacrosses(url) || URL_VALIDAROR.isValid(url)) {
-            return url;
-        }
-
-        throw new IllegalArgumentException("URL supplied is not valid: " + url);
+    public static String validateUrl(String url) {
+        return parseUrl(url).toString();
     }
 
-    // TODO: We need our own way to work with url macrosses
-    private static boolean containsMacrosses(String url) {
-        return StringUtils.contains(url, MACROS_OPEN) && StringUtils.contains(url, MACROS_CLOSE);
-    }
-
-    public static String validateDomainName(String domainName) {
-        if (domainName == null) {
-            throw new PreBidException("Domain name is null");
-        }
-        if (domainName.isEmpty()) {
-            return domainName;
-        }
-        if (!VALID_DOMAIN.matcher(domainName).matches()) {
-            throw new PreBidException("Domain name %s contains invalid characters".formatted(domainName));
-        }
-        return domainName;
-    }
-
-    public static String validatePathSegment(String pathSegment) {
-        for (char c : INVALID_PATH_CHARACTERS.toCharArray()) {
-            if (pathSegment.indexOf(c) != -1) {
-                throw new PreBidException("Path segment %s contains forbidden character %s".formatted(pathSegment, c));
-            }
-        }
-
-        if (pathSegment.contains("//")) {
-            throw new PreBidException("Path segment %s contains forbidden sequence %s".formatted(pathSegment, "//"));
-        }
-        if (Arrays.asList(pathSegment.split("/")).contains("..")) {
-            throw new PreBidException("Path segment %s contains forbidden segment %s".formatted(pathSegment, ".."));
-        }
-
-        return pathSegment;
-    }
-
-    /**
-     * Returns encoded URL for the given value.
-     * <p>
-     * The result can be safety used as the query string.
-     */
     public static String encodeUrl(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        return UrlEncoder.encode(value);
     }
 
-    /**
-     * Returns decoded value if supplied is not null, otherwise returns null.
-     */
     public static String decodeUrl(String value) {
         if (StringUtils.isBlank(value)) {
             return null;
@@ -173,18 +106,12 @@ public final class HttpUtil {
         return URLDecoder.decode(value, StandardCharsets.UTF_8);
     }
 
-    /**
-     * Creates general headers for request.
-     */
     public static MultiMap headers() {
         return MultiMap.caseInsensitiveMultiMap()
                 .add(CONTENT_TYPE_HEADER, APPLICATION_JSON_CONTENT_TYPE)
                 .add(ACCEPT_HEADER, HttpHeaderValues.APPLICATION_JSON);
     }
 
-    /**
-     * Creates header from name and value, when value is not null or empty string.
-     */
     public static void addHeaderIfValueIsNotEmpty(MultiMap headers, CharSequence headerName, CharSequence headerValue) {
         if (StringUtils.isNotEmpty(headerValue)) {
             headers.add(headerName, headerValue);
@@ -195,9 +122,10 @@ public final class HttpUtil {
         if (StringUtils.isBlank(url)) {
             return null;
         }
+
         try {
-            return new URL(url).getHost();
-        } catch (MalformedURLException e) {
+            return parseUrl(url).getHost();
+        } catch (IllegalArgumentException e) {
             return null;
         }
     }
@@ -264,14 +192,24 @@ public final class HttpUtil {
                 .filter(entry -> !isSensitiveHeader(entry.getKey()))
                 .collect(Collectors.toMap(Map.Entry::getKey,
                         entry -> StringUtils.isNotBlank(entry.getValue())
-                                 ? Arrays.stream(entry.getValue().split(","))
+                                ? Arrays.stream(entry.getValue().split(","))
                                 .map(String::trim)
                                 .toList()
-                                 : Collections.singletonList(entry.getValue())))
+                                : Collections.singletonList(entry.getValue())))
                 : null;
     }
 
     private static boolean isSensitiveHeader(String header) {
         return SENSITIVE_HEADERS.stream().anyMatch(header::equalsIgnoreCase);
+    }
+
+    private static class UrlEncoder {
+
+        private static final String CONTENT = "CONTENT";
+        private static final UriTemplate ENCODER = UriTemplate.of("{" + CONTENT + "}");
+
+        public static String encode(String value) {
+            return ENCODER.expandToString(Variables.variables().set(CONTENT, value));
+        }
     }
 }
